--- a/Develop/hthomas93.html
+++ b/Develop/hthomas93.html
@@ -65,6 +65,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
+         background-color: #26175A;
+         color: white;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
