--- a/Develop/hthomas93.html
+++ b/Develop/hthomas93.html
@@ -65,8 +65,8 @@
          display: flex;
          justify-content: center;
          flex-wrap: wrap;
-         background-color: #26175A;
-         color: white;
+         background-color: #C1C72C;
+         color: black;
          padding: 10px;
          width: 95%;
          border-radius: 6px;
@@ -139,3 +139,31 @@
           } 
          }
       </style>
+      <body>
+  <div class="wrapper">
+    <main>
+
+      <h1>hthomas93</h1>
+
+      <img src="https://avatars2.githubusercontent.com/u/17115342?v=4.png" alt="">
+
+      <a href="https://www.google.com/maps/place/Austin,+TX">Find me here!</a>
+
+      <a href="https://github.com/hthomas93">My github profile!</a>
+
+      <p>No blog information provided!</p>
+
+      <p>No bio information provided!</p>
+
+      <h3>"Number of repositories: 14"</h3>
+
+      <h3>"Number of followers: undefined"</h3>
+
+      <h3>"Number following: 16"</h3>
+
+      <h3>"Number of Github starred repos: 0"</h3>
+
+
+    </main>
+  </div>
+</body>
