--- a/Develop/hthomas93.html
+++ b/Develop/hthomas93.html
@@ -8,53 +8,68 @@
       <link href="https://fonts.googleapis.com/css?family=BioRhyme|Cabin&display=swap" rel="stylesheet">
       <title>Document</title>
       <style>
+
           @page {
             margin: 0;
           }
+
          *,
          *::after,
          *::before {
          box-sizing: border-box;
          }
+
          html, body {
          padding: 0;
          margin: 0;
          }
+
          html, body, .wrapper {
          height: 100%;
          }
+
          .wrapper {
+         background-color: #E6E1C3;
          padding-top: 100px;
          }
+
          body {
          background-color: white;
          -webkit-print-color-adjust: exact !important;
          font-family: 'Cabin', sans-serif;
          }
+
          main {
          background-color: #E9EDEE;
          height: auto;
          padding-top: 30px;
          }
+
          h1, h2, h3, h4, h5, h6 {
          font-family: 'BioRhyme', serif;
          margin: 0;
          }
+
          h1 {
          font-size: 3em;
          }
+
          h2 {
          font-size: 2.5em;
          }
+
          h3 {
          font-size: 2em;
          }
+
          h4 {
          font-size: 1.5em;
          }
+
          h5 {
          font-size: 1.3em;
          }
+
          h6 {
          font-size: 1.2em;
          }
@@ -71,6 +86,7 @@
          width: 95%;
          border-radius: 6px;
          }
+
          .photo-header img {
          width: 250px;
          height: 250px;
@@ -79,29 +95,36 @@
          margin-top: -75px;
          box-shadow: rgba(0, 0, 0, 0.3) 4px 1px 20px 4px;
          }
+
          .photo-header h1, .photo-header h2 {
          width: 100%;
          text-align: center;
          }
+
          .photo-header h1 {
          margin-top: 10px;
+         border: 6px solid #black;
          }
+
          .links-nav {
          width: 100%;
          text-align: center;
          padding: 20px 0;
          font-size: 1.1em;
          }
+
          .nav-link {
          display: inline-block;
          margin: 5px 10px;
          }
+
          .workExp-date {
          font-style: italic;
          font-size: .7em;
          text-align: right;
          margin-top: 10px;
          }
+
          .container {
          padding: 50px;
          padding-left: 100px;
@@ -120,6 +143,8 @@
            padding: 20px;
            border-radius: 6px;
            margin: 20px;
+           background-color: #C1C72C;
+           color: black;
          }
 
          .col {
@@ -142,26 +167,29 @@
       <body>
   <div class="wrapper">
     <main>
+      <div class = "photo-header">
+      <h1 class=>hthomas93</h1>
 
-      <h1>hthomas93</h1>
+      <img class" src="https://avatars2.githubusercontent.com/u/17115342?v=4.png" alt="">
 
-      <img src="https://avatars2.githubusercontent.com/u/17115342?v=4.png" alt="">
-
-      <a href="https://www.google.com/maps/place/Austin,+TX">Find me here!</a>
-
-      <a href="https://github.com/hthomas93">My github profile!</a>
-
-      <p>No blog information provided!</p>
-
+      <a class= href="https://www.google.com/maps/place/Austin,+TX">Find me here!</a>
+      <div class = "links-nav">
+         <div class="nav-link">
+        <a href="https://github.com/hthomas93">My github profile!</a>
+         </div>
+         <div class="nav-link">
+        <p></p>
+        </div>
+      </   
       <p>No bio information provided!</p>
+    
+      <h3>Number of repositories: 14</h3>
 
-      <h3>"Number of repositories: 14"</h3>
+      <h3>Number of followers: 5</h3>
 
-      <h3>"Number of followers: undefined"</h3>
+      <h3>Number following: 16</h3>
 
-      <h3>"Number following: 16"</h3>
-
-      <h3>"Number of Github starred repos: 0"</h3>
+      <h3>Number of Github starred repos: 0</h3>
 
 
     </main>
